ggplot 0.5.7
----------------------------------------

New geoms, scales and aesthetics

  * stat_step and geom_step to draw staircase plots (like plot(type="s"))
  * order aesthetic (currently only for lines/paths) allows you to control the drawing order within a group
  * scale_manual makes it easier to let ggplot uses the exact colours/sizes/linetypes that you want
  * scale_reverse allows you to reverse the scale


Improved options handling

  * new function opts() to allow modification of plot options by addition
  * update(p, theme_bw) and p + theme_bw now work

These changes mean that you can modify plot options in the same way that you modify all other aspects of the plot, e.g.  qplot(mpg, wt, data=mptcars) + opts(title = "Fuel economy vs weight")

Improved documentation

  * many tweaks to the online documentation, particular including the actual code you need to run for each object!
  * every page now has a link to a form where you can submit feedback on exactly you do or don't like about a page
  * required aesthetics now listed in documentation
  * geom_polygon now has a decent example
  * numerous minor corrections suggested by Jörg Beyer
  * separated plotting advice from details of plot construction (what vs how), thanks to Bert Gunter for this suggestion


Improved map projections (with coord_map)

  * coord_map defaults to orientation = c(90, 0, mean(range(y))) - this ensures that multiple layers line up correctly, but means you will have to specify the orientation yourself for many projections 
  * coord_map now respects limits set by scales
  * removed useless ticks from coord_map

If you're using ggplot to draw maps and have thought of other features that would make your life easier, please let me know.


Bug fixes

  * adding data and aesthetics in separate steps should now work
  * layers with set parameters will not use mapped aesthetics
  * use LazyLoad: false instead of SaveData: true for better future compatability
