@@ -45,6 +45,7 @@ scale_colour_continuous <- function(...) ScaleColourContinuous$new(..., variable
 scale_colour_discrete <- function(...) ScaleColourDiscrete$new(..., variable = "colour")
 scale_colour_gradient <- function(...) ScaleGradient$new(..., variable = "colour")
 scale_colour_gradient2 <- function(...) ScaleGradient2$new(..., variable = "colour")
+scale_colour_grey <- function(...) ScaleGrey$new(..., variable = "colour")
 scale_colour_hue <- function(...) ScaleHue$new(..., variable = "colour")
 scale_colour_identity <- function(...) ScaleIdentity$new(..., variable = "colour")
 scale_colour_manual <- function(...) ScaleManual$new(..., variable = "colour")
@@ -54,6 +55,7 @@ scale_fill_continuous <- function(...) ScaleColourContinuous$new(..., variable =
 scale_fill_discrete <- function(...) ScaleColourDiscrete$new(..., variable = "fill")
 scale_fill_gradient <- function(...) ScaleGradient$new(..., variable = "fill")
 scale_fill_gradient2 <- function(...) ScaleGradient2$new(..., variable = "fill")
+scale_fill_grey <- function(...) ScaleGrey$new(..., variable = "fill")
 scale_fill_hue <- function(...) ScaleHue$new(..., variable = "fill")
 scale_fill_identity <- function(...) ScaleIdentity$new(..., variable = "fill")
 scale_fill_manual <- function(...) ScaleManual$new(..., variable = "fill")
